Smooth scroll fixed and css for scrollbar added

--- a/src/assets/styles/assets/base.scss
+++ b/src/assets/styles/assets/base.scss
@@ -34,7 +34,7 @@ html{
 	}
 }
 body {
-	position: relative;
+	// position: relative;
 	margin: 0;
 	min-width: 320px;
 	font-size: 16px;
